Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-99359

Fix Metadata Test in Android

XMLWordPrintable

    • Android
    • 8715577e3e (qt/qtmultimedia/dev) 0017e3da19 (qt/qtmultimedia/6.3) aad1cd1a2f (qt/qtmultimedia/6.2) aad1cd1a2f (qt/qtmultimedia/6.2.3) aad1cd1a2f (qt/tqtc-qtmultimedia/6.2) aad1cd1a2f (qt/tqtc-qtmultimedia/6.2.3)

      25: FAIL! : tst_QMediaPlayerBackend::metadata() Compared values are not the same
      25: Actual (metadataChangedSpy.count()): 0
      25: Expected (1) : 1
      25: Loc: [/Users/Samuel/Desktop/Qt/qt5/qtmultimedia/tests/auto/integration/qmediaplayerbackend/tst_qmediaplayerbackend.cpp(1103)]

        For Gerrit Dashboard: QTBUG-99359
        # Subject Branch Project Status CR V

            samuelmira Samuel Mira
            samuelmira Samuel Mira
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes