Fix Multimedia auto test Metadata in Android

Missing signal emit when the source is not valid

Fixes: QTBUG-99359
Pick-to: 6.2 6.3
Change-Id: I07c494d83b55af7d4f94fcede8a86eba60f52f03
Reviewed-by: Lars Knoll <lars.knoll@qt.io>